--- a/_includes/analytics-providers/google-universal.html
+++ b/_includes/analytics-providers/google-universal.html
@@ -4,16 +4,6 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', '{{ site.analytics.google.tracking_id }}', 'auto');
+  ga('create', 'UA-129089690-1', 'auto');
   ga('send', 'pageview');
-</script>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129089690-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-129089690-1');
 </script>
